making mask and finding the proper color for the marker #JUST A TEST

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,32 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import numpy as np\n",
     "\n",
-    "cap = cv2.VideoCapture(0)   #acceccing the default camera\n",
+    "cam = cv2.VideoCapture(0)   #acceccing the default camera\n",
     "\n",
     "#here we are setting the size of the camera frame\n",
-    "cap.set(3,640)            \n",
-    "cap.set(4,480)            \n",
+    "cam.set(3,640)            \n",
+    "cam.set(4,480)            \n",
     "\n",
     "#for setting the brightness\n",
-    "cap.set(10,150)           \n",
+    "cam.set(10,150)           \n",
     "\n",
     "\n",
+    "markerColors=[[0,153,0,4,255,255]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def findingColors(img, markerColors) :\n",
+    "    \n",
+    "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
+    "    lower = np.array(markerColors[0][0:3])\n",
+    "    upper = np.array(markerColors[0][3:6])\n",
+    "    \n",
+    "    mask = cv2.inRange(HSVimg, lower, upper)\n",
+    "    \n",
+    "    cv2.imshow(\"mask image\", mask)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "while True :\n",
-    "    success, img = cap.read()  #it will save our images in the 'img'  variable, and \n",
+    "    success, img = cam.read()  #it will save our images in the 'img'  variable, and \n",
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
     "\n",
-    "    cv2.imshow(\"Video\",img)    #this will show the result\n",
+    "    findingColors(img, markerColors)\n",
+    "    \n",
+    "    cv2.imshow(\"camera image\",img)    #this will show the result\n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF ==ord('q') :\n",
     "        break;\n",
-    "        "
+    "\n",
+    "cam.release()\n",
+    "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
