--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,18 @@
     "\n",
     "markerColors=[[0,153,0,4,255,255]]\n",
     "\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def findingColors(img, markerColors) :\n",
     "    \n",
     "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
@@ -32,11 +42,15 @@
     "    \n",
     "    mask = cv2.inRange(HSVimg, lower, upper)\n",
     "    \n",
-    "    cv2.imshow(\"mask image\", mask)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    cv2.imshow(\"mask image\", mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "while True :\n",
     "    success, img = cam.read()  #it will save our images in the 'img'  variable, and \n",
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
@@ -51,13 +65,6 @@
     "cam.release()\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
