putting the bounding box over the desired detected object

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,36 @@
     "\n",
     "markerColors=[[0,153,0,4,255,255]]\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findContours(img) :\n",
+    "    \n",
+    "    contours, Hierarchy = cv2.findContours(img, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
+    "    \n",
+    "    for cnt in contours :\n",
+    "        area = cv2.contourArea(cnt)\n",
+    "        \n",
+    "        \n",
+    "        if area>500 :\n",
+    "            cv2.drawContours(ResultImg, cnt, -1, (255,0,0),3)\n",
+    "            peri = cv2.arcLength(cnt, True)\n",
+    "            \n",
+    "            approx = cv2.approxPolyDP(cnt, 0.02*peri, True)\n",
+    "            \n",
+    "            \n",
+    "            x, y, w, h = cv2.boundingRect(approx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +63,23 @@
     "    \n",
     "    mask = cv2.inRange(HSVimg, lower, upper)\n",
     "    \n",
-    "    cv2.imshow(\"mask image\", mask)"
+    "    findContours(mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "while True :\n",
     "    success, img = cam.read()  #it will save our images in the 'img'  variable, and \n",
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
-    "\n",
+    "    ResultImg = img.copy()\n",
+    "        \n",
     "    findingColors(img, markerColors)\n",
     "    \n",
-    "    cv2.imshow(\"camera image\",img)    #this will show the result\n",
+    "    cv2.imshow(\"camera image\",ResultImg)    #this will show the result\n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF ==ord('q') :\n",
     "        break;\n",
