adding for loop for more dynamic color seletions

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -58,12 +58,13 @@
     "    \n",
     "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
     "    \n",
-    "    lower = np.array(markerColors[0][0:3])\n",
-    "    upper = np.array(markerColors[0][3:6])\n",
+    "    for colors in markerColors : \n",
+    "        lower = np.array(colors[0][0:3])\n",
+    "        upper = np.array(colors[0][3:6])\n",
     "    \n",
-    "    mask = cv2.inRange(HSVimg, lower, upper)\n",
+    "        mask = cv2.inRange(HSVimg, lower, upper)\n",
     "    \n",
-    "    findContours(mask)"
+    "        findContours(mask)"
    ]
   },
   {
