--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def findContours(img) :\n",
     "    \n",
     "    contours, Hierarchy = cv2.findContours(img, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
+    "    \n",
+    "    x, y, width, height = 0,0,0,0     #if the object if not detected the value returned will be zero \n",
     "    \n",
     "    for cnt in contours :\n",
     "        area = cv2.contourArea(cnt)\n",
@@ -45,12 +47,14 @@
     "            approx = cv2.approxPolyDP(cnt, 0.02*peri, True)\n",
     "            \n",
     "            \n",
-    "            x, y, w, h = cv2.boundingRect(approx)"
+    "            x, y, width, height = cv2.boundingRect(approx)\n",
+    "            \n",
+    "    return x+width//2,y           #returning the value for returning the tip's center position of the marker to write"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +63,19 @@
     "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
     "    \n",
     "    for colors in markerColors : \n",
-    "        lower = np.array(colors[0][0:3])\n",
-    "        upper = np.array(colors[0][3:6])\n",
+    "        lower = np.array(colors[0:3])\n",
+    "        upper = np.array(colors[3:6])\n",
     "    \n",
     "        mask = cv2.inRange(HSVimg, lower, upper)\n",
     "    \n",
-    "        findContours(mask)"
+    "        x, y = findContours(mask)     #getting the value to draw our tip\n",
+    "        cv2.circle(ResultImg,(x,y),8,(0,0,0),cv2.FILLED)        #creating the tip of our marker\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
