giving proper color to the tip

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,15 @@
     "cam.set(10,150)           \n",
     "\n",
     "\n",
-    "markerColors=[[0,153,0,4,255,255]]\n",
+    "markerColors= [[0,153,0,4,255,255]]\n",
     "\n",
+    "tipColors= [[51,153,255]]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +38,11 @@
     "    x, y, width, height = 0,0,0,0     #if the object if not detected the value returned will be zero \n",
     "    \n",
     "    for cnt in contours :\n",
-    "        area = cv2.contourArea(cnt)\n",
+    "        area = cv2.contourArea(cnt)   #getting the contour Area\n",
     "        \n",
     "        \n",
     "        if area>500 :\n",
-    "            cv2.drawContours(ResultImg, cnt, -1, (255,0,0),3)\n",
+    "    #cv2.drawContours(ResultImg, cnt, -1, (255,0,0),3)      #this function just helps in creating a bounding box over the object\n",
     "            peri = cv2.arcLength(cnt, True)\n",
     "            \n",
     "            approx = cv2.approxPolyDP(cnt, 0.02*peri, True)\n",
@@ -54,13 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findingColors(img, markerColors) :\n",
+    "def findingColors(img, markerColors, tipColors) :\n",
     "    \n",
     "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
+    "    i = 0                               #counter to change the color tipColors values\n",
     "    \n",
     "    for colors in markerColors : \n",
     "        lower = np.array(colors[0:3])\n",
@@ -69,13 +72,14 @@
     "        mask = cv2.inRange(HSVimg, lower, upper)\n",
     "    \n",
     "        x, y = findContours(mask)     #getting the value to draw our tip\n",
-    "        cv2.circle(ResultImg,(x,y),8,(0,0,0),cv2.FILLED)        #creating the tip of our marker\n",
+    "        cv2.circle(ResultImg,(x,y),8,tipColors[i],cv2.FILLED)        #creating the tip of our marker\n",
+    "        ++i\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +88,7 @@
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
     "    ResultImg = img.copy()\n",
     "        \n",
-    "    findingColors(img, markerColors)\n",
+    "    findingColors(img, markerColors, tipColors)\n",
     "    \n",
     "    cv2.imshow(\"camera image\",ResultImg)    #this will show the result\n",
     "    \n",
