creating the list of points for drawing

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -22,6 +22,8 @@
     "markerColors= [[0,153,0,4,255,255]]\n",
     "\n",
     "tipColors= [[17,125,249]]\n",
+    "\n",
+    "Points= []                              #[x, y, color index]  checking the value of x and y and drawing the points on \n",
     "    "
    ]
   },
@@ -63,6 +65,8 @@
     "    \n",
     "    HSVimg = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
     "    \n",
+    "    newPoints=[]\n",
+    "    \n",
     "    i = 0                               #counter to change the color tipColors values\n",
     "    \n",
     "    for colors in markerColors : \n",
@@ -73,8 +77,26 @@
     "    \n",
     "        x, y = findContours(mask)     #getting the value to draw our tip\n",
     "        cv2.circle(ResultImg,(x,y),8,tipColors[i],cv2.FILLED)        #creating the tip of our marker\n",
+    "        \n",
+    "        if x!=0 and y!=0 :\n",
+    "            newPoints.append([x, y, i])\n",
+    "        \n",
     "        ++i\n",
-    "        "
+    "        \n",
+    "    return newPoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def screenDrawing(Points, tipColors) :\n",
+    "    \n",
+    "    for pt in Points :\n",
+    "        cv2.circle(ResultImg,(pt[0],pt[1]),8,tipColors[pt[2]],cv2.FILLED)\n",
+    "    "
    ]
   },
   {
@@ -88,7 +110,14 @@
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
     "    ResultImg = img.copy()\n",
     "        \n",
-    "    findingColors(img, markerColors, tipColors)\n",
+    "    newPoints= findingColors(img, markerColors, tipColors)\n",
+    "    if len(newPoints) != 0 :\n",
+    "        for nwp in newPoints :\n",
+    "            Points.append(nwp)\n",
+    "        \n",
+    "    if len(Points)!=0 :\n",
+    "        (Points, tipColors)\n",
+    "        \n",
     "    \n",
     "    cv2.imshow(\"camera image\",ResultImg)    #this will show the result\n",
     "    \n",
