--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -92,7 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "def screenDrawing(Points, tipColors) :\n",
+    "    \n",
+    "    for pt in Points :\n",
+    "        cv2.circle(ResultImg,(pt[0],pt[1]),8,tipColors[pt[2]],cv2.FILLED)\n",
     "    "
    ]
   },
@@ -108,7 +111,12 @@
     "    ResultImg = img.copy()\n",
     "        \n",
     "    newPoints= findingColors(img, markerColors, tipColors)\n",
-    "\n",
+    "    if len(newPoints) != 0 :\n",
+    "        for nwp in newPoints :\n",
+    "            Points.append(nwp)\n",
+    "        \n",
+    "    if len(Points)!=0 :\n",
+    "        screenDrawing(Points, tipColors)\n",
     "        \n",
     "    \n",
     "    cv2.imshow(\"camera image\",ResultImg)    #this will show the result\n",
