getting the mirror image effect

--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "while True :\n",
-    "    success, img = cam.read()  #it will save our images in the 'img'  variable, and \n",
+    "    success, imgf = cam.read()  #it will save our images in the 'img'  variable, and \n",
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
+    "    \n",
+    "   # img = cv2.flip(imgf,1)\n",
+    "    \n",
     "    ResultImg = img.copy()\n",
     "        \n",
     "    newPoints= findingColors(img, markerColors, tipColors)\n",
@@ -121,12 +124,19 @@
     "    \n",
     "    cv2.imshow(\"camera image\",ResultImg)    #this will show the result\n",
     "    \n",
-    "    if cv2.waitKey(1) & 0xFF ==ord('q') :\n",
+    "    if cv2.waitKey(1) & 0xFF ==ord('q') :                           #press 'q' to exit from the window\n",
     "        break;\n",
     "\n",
     "cam.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
