--- a/better explanation through camera.ipynb
+++ b/better explanation through camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "while True :\n",
-    "    success, imgf = cam.read()  #it will save our images in the 'img'  variable, and \n",
+    "    success, imgNotMirror = cam.read()  #it will save our images in the 'img'  variable, and \n",
     "                               #'success' variable will store a boolean varible it will tell weather theimage is captured or not\n",
     "    \n",
-    "   # img = cv2.flip(imgf,1)\n",
+    "    img = cv2.flip(imgNotMirror,1)\n",
     "    \n",
     "    ResultImg = img.copy()\n",
     "        \n",
